--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,6 +3,7 @@
   "name": "vibelist",
   "compatibility_date": "2025-01-01",
   "assets": {
+    "directory": "./dist",
     "not_found_handling": "single-page-application"
   }
 }
